# python-project-52

./: .env  .gitignore  Makefile  Procfile  Procifile  README.md  db.sqlite3  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django-test_and_lint.yml  django.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
task/: models.py
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_time_of_create_status_time_create.py
task_manager/tasks/: admin.py  filter.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_label.py  0004_alter_task_label.py  0005_alter_task_label.py  0006_rename_label_labelfortask_labels_and_more.py  0007_alter_task_executor.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: index.html  show_task.html
task_manager/templates/users/: create.html  delete.html  index.html
task_manager/translations/: trans.py
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
